--- a/src/sections/Projetos.css
+++ b/src/sections/Projetos.css
@@ -28,3 +28,33 @@
     margin: var(--margem-padraoX);
     justify-items: center;
 }
+
+@media (max-width: 767px) {
+    .circulo:first-of-type {
+        position: absolute;
+        background: transparent;
+        left: -17%;
+        width: 250px;
+        height: 250px;
+        border-radius: 50%;
+        border: 20px solid var(--cor-segundaria);
+        opacity: 0.45;
+        filter: blur(5px) drop-shadow(0 0 15px var(--cor-segundaria));
+        z-index: -1;
+    }
+
+    .titulo-projetos {
+        font-family: 'titulo';
+        color: white;
+        text-align: justify;
+        font-size: 3.5rem;
+        margin-left: 1.5rem;
+    }
+
+    .cards-projetos {
+        grid-template-columns: 1fr; /* Apenas uma coluna */
+        gap: 0.5rem; /* Reduz o espaço entre os cards */
+        margin: 1rem; /* Margem menor */
+    }
+
+}
