--- a/src/sections/Servicos.css
+++ b/src/sections/Servicos.css
@@ -86,7 +86,7 @@
         min-height: 100vh;
         /* ocupa no mínimo uma tela */
         padding-bottom: 2rem;
-        padding-top: 2rem;
+        padding-top: 50rem;
         /* cria espaço em cima, importante */
     }
 
@@ -122,6 +122,7 @@
 
     .servico-header h3 {
         font-size: 1.1rem;
+        margin-bottom: 1rem;
     }
 
     .status {
@@ -147,5 +148,13 @@
 
     .tecnologia-card span {
         font-size: 0.7rem;
+    }
+
+    .container-tecnologias h2 {
+        margin-inline: 5rem;
+        font-family: 'titulo';
+        color: white;
+        font-size: 2rem;
+        margin-top: var(--margem-padraoY);
     }
 }
