--- a/src/components/HandImage.css
+++ b/src/components/HandImage.css
@@ -37,31 +37,25 @@
     }
 
     .hand {
-        position: absolute;
-        height: auto;
-        width: 35%;
-        right: 0;
-        margin-block: 100%;
-        z-index: -2;
-        animation: PEGAR infinite 15s ease-in-out;
-        transform-origin: center;
+        display: none;
     }
+
 
     @keyframes PEGAR {
         0% {
-            transform: translateX(0%)  scale(1);
+            transform: translateX(0%) scale(1);
         }
 
         40% {
-            transform: translateX(5%)  scale(0.98);
+            transform: translateX(5%) scale(0.98);
         }
 
         60% {
-            transform: translateX(6%)  scale(1.2);
+            transform: translateX(6%) scale(1.2);
         }
 
         100% {
-            transform: translateX(0%)  scale(1);
+            transform: translateX(0%) scale(1);
         }
     }
 
