--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,6 +10,7 @@
     height: auto;
 }
 
+
 /* Botão hamburguer (3 barrinhas) */
 .hamburger-btn {
     position: fixed;
@@ -77,7 +78,7 @@
 }
 
 /* Desktop: menu visível e horizontal */
-@media (min-width: 768px) {
+@media (min-width: 767px) {
         .nav-links {
             position: fixed;
             list-style: none;
@@ -127,6 +128,7 @@
             width: 100%;
             filter: drop-shadow(0 0 5px var(--cor-primaria));
         }
+        
     }
 
     /* Mobile: até 767px */
@@ -172,12 +174,13 @@
 
         /* Menu fechado */
         .nav-links {
+            margin-top: 1rem;
             display: none;
             position: fixed;
             top: -16.5px;
             left: 0;
-            width: 100%;
-            height: 25%;
+            width: 100vw;
+            height: 27%;
             flex-direction: column;
             gap: 20px;
             background: #1f4023;
