--- a/src/sections/Projetos.css
+++ b/src/sections/Projetos.css
@@ -49,6 +49,7 @@
         text-align: justify;
         font-size: 3.5rem;
         margin-left: 1.5rem;
+        margin-top: 0;
     }
 
     .cards-projetos {
