--- a/src/components/EfeitoV.css
+++ b/src/components/EfeitoV.css
@@ -88,7 +88,7 @@
 .scroll::before {
     content: "";
     display: block;
-    background-image: url("src/assets/svg/seta.svg");
+    background-image: url("public/svg/seta.svg");
     background-repeat: no-repeat;
     position: absolute;
     left: 50%;
@@ -216,7 +216,7 @@
     .scroll::before {
         content: "";
         display: block;
-        background-image: url("src/assets/svg/seta.svg");
+        background-image: url("public/svg/seta.svg");
         background-repeat: no-repeat;
         position: absolute;
         left: 50%;
