--- a/src/components/ProjetoItem.css
+++ b/src/components/ProjetoItem.css
@@ -14,7 +14,16 @@
     max-width: 450px;
     padding-top: 25px;
     position: relative;
+    transition: all 0.5s ease;
 }
+
+.projeto-item:hover {
+    border: 1px solid var(--cor-primaria);
+    background: rgba(255, 255, 255, 0.12);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    transition: all 0.5s ease;
+}
+
 
 .projeto-item h2 {
     position: relative;
